--- a/app/views/pages/pubsapi.html.erb
+++ b/app/views/pages/pubsapi.html.erb
@@ -1,13 +1,13 @@
 <div class="hero-unit">
 <h2>Resource Description</h2>
 
-<b style="font-size:large">http://sulcap.stanford.edu/publications</b>
+<b style="font-size:large"><%=Settings.SULPUB_ID.PUB_URI %></b>
 
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 <h2 style="font-size:medium">HTTP Methods</h2>
 
-<table class="table table-striped">       
+<table class="table table-striped">
         <tbody>
           <thead>
           <tr>
@@ -21,7 +21,7 @@
             <td>OPTIONS</td>
             <td>Lists available methods.</td>
             <td>None.</td>
-            <td>No body - lists methods in 'Allow' header.</td>               
+            <td>No body - lists methods in 'Allow' header.</td>
           </tr>
           <tr>
             <td>POST</td>
@@ -57,15 +57,15 @@
             <td>application/json</td>
             <td>The content type for submitted entity.</td>
             <td>POST</td>
-            <td>Yes</td>   
+            <td>Yes</td>
           </tr>
           <tr>
             <td>Stan-Key</td>
             <td>N/A</td>
             <td>Authentication Key, actual name and value vary.</td>
             <td>POST, OPTIONS</td>
-            <td>Yes</td>       
-          </tr>          
+            <td>Yes</td>
+          </tr>
         </tbody>
       </table>
 
@@ -92,9 +92,9 @@
             <td>Allow</td>
             <td>Method Names</td>
             <td>Lists allowed methods at URI</td>
-            <td>OPTIONS</td>     
+            <td>OPTIONS</td>
           </tr>
-         
+
         </tbody>
       </table>
 
@@ -116,49 +116,49 @@
             <td>Created - Entity successfully created</td>
             <td>POST</td>
             <td>BibJSON for new record(s)</td>
-          </tr>    
+          </tr>
           <tr>
             <td>303</td>
             <td>See Other - duplicate post</td>
             <td>POST</td>
             <td>error indicating this is a duplicate post</td>
-          </tr>  
+          </tr>
           <tr>
             <td>400</td>
             <td>Bad Request</td>
             <td>POST</td>
             <td>Message: Invalid BibJSON </td>
-          </tr>  
+          </tr>
           <tr>
             <td>401</td>
             <td>Unauthorized</td>
             <td>POST, OPTIONS</td>
             <td>None</td>
-          </tr>  
+          </tr>
           <tr>
             <td>405</td>
             <td>Method Not Allowed</td>
             <td>GET, HEAD, PUT, PATCH, DELETE</td>
             <td>No Entity, but allowed methods listed in Allow header</td>
-          </tr> 
+          </tr>
           <tr>
             <td>406</td>
             <td>Not Acceptable - Can't satisfy request accept header</td>
             <td>GET</td>
             <td>None</td>
-          </tr> 
+          </tr>
            <tr>
             <td>415</td>
             <td>Unsupported Media Type - POST entity with wrong Content-Type</td>
             <td>POST</td>
             <td>None</td>
-          </tr> 
+          </tr>
           <tr>
             <td>204</td>
             <td>No Content - Successful, but no entity returned.</td>
             <td>OPTIONS</td>
             <td>None</td>
-          </tr>     
+          </tr>
         </tbody>
       </table>
 
