--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
-<h5 style="padding-bottom:10px;text-align:left;">http://sulcap.stanford.edu/publications/{sulPubId}</h5>
+<h5 style="padding-bottom:10px;text-align:left;"><%=Settings.SULPUB_ID.PUB_URI %>/{sulPubId}</h5>
 <p class="sultext">View, update, or delete a single publication resource.</p>
 <table class="table table-striped">
         <tbody>
@@ -37,7 +37,7 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
-<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/publications</h5>
+<h5 style="padding-bottom:10px;text-align:left"><%=Settings.SULPUB_ID.PUB_URI %></h5>
 <p class="sultext">Create one or more publication resources.</p>
 <table class="table table-striped">
         <tbody>
@@ -55,7 +55,7 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
-<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/publications?changedSince={YYYY-MM-DDTHH:MM:SSZ}&capProfileId={capId}&page={resultpage}&per={results_per_page}</h5>
+<h5 style="padding-bottom:10px;text-align:left"><%=Settings.SULPUB_ID.PUB_URI %>?changedSince={YYYY-MM-DDTHH:MM:SSZ}&capProfileId={capId}&page={resultpage}&per={results_per_page}</h5>
 <p class="sultext">Returns all publications created or modified since the given date.  If the profile id is specified then only publications for that id are returned.</p>
 <table class="table table-striped">
         <tbody>
@@ -77,7 +77,7 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
-<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/authorship</h5>
+<h5 style="padding-bottom:10px;text-align:left"><%=Settings.SULPUB_ID.AUTHORSHIP_URI %></h5>
 <p class="sultext">Create or modify an authorship record.</p>
 <table class="table table-striped">
         <tbody>
@@ -95,7 +95,7 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
-<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/publications/sourcelookup?year={}&title={}&source={}&doi={}&pmid={}</h5>
+<h5 style="padding-bottom:10px;text-align:left"><%=Settings.SULPUB_ID.PUB_URI %>/sourcelookup?year={}&title={}&source={}&doi={}&pmid={}</h5>
 <p class="sultext">Returns all matching publications from remote sources or from users' locally submitted publications.  </p>
 <table class="table table-striped">
         <tbody>
@@ -114,9 +114,3 @@
           <tbody>
 </table>
 <p class="sultext"><%= link_to "See Full Spec", page_path('queryapi') %></p>
-
-
-
-
-
- <!-- <%= link_to "GET /sulbib/v1/publications/1", '#', class: "btn btn-large btn-primary" %>  -->
