adds documentation for authors api

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -114,3 +114,16 @@
           <tbody>
 </table>
 <p class="sultext"><%= link_to "See Full Spec", page_path('queryapi') %></p>
+<hr style="color:#000;background-color:#000;border-color:#000"/>
+
+<h5 style="padding-bottom:10px;text-align:left"><%=Settings.SULPUB_ID.AUTHOR_URI %>/{capId}/harvest?format=json&altNames={false}</h5>
+<p class="sultext">Harvests publications for an Author.</p>
+<table class="table table-striped">
+        <tbody>
+          <tr>
+            <td>POST</td>
+            <td>Harvests publications for an Author.</td>
+          </tr>
+          <tbody>
+</table>
+<p class="sultext"><%= link_to "See Full Spec", page_path('authorapi') %></p>
