update our API docs to show new returned status

--- a/app/views/pages/authorapi.html.erb
+++ b/app/views/pages/authorapi.html.erb
@@ -142,6 +142,12 @@
       <td>None</td>
     </tr>
     <tr>
+      <td>403</td>
+      <td>Forbidden</td>
+      <td>POST</td>
+      <td>None</td>
+    </tr>
+    <tr>
       <td>406</td>
       <td>Not Acceptable - Can't satisfy request accept header</td>
       <td>POST</td>
