--- a/app/views/pages/authorshipapi.html.erb
+++ b/app/views/pages/authorshipapi.html.erb
@@ -138,6 +138,12 @@
             <td>None</td>
           </tr>
           <tr>
+            <td>403</td>
+            <td>Forbidden</td>
+            <td>POST</td>
+            <td>None</td>
+          </tr>
+          <tr>
             <td>404</td>
             <td>Does Not Exist- indicates one of the identifiers in the json was incorrect.</td>
             <td>POST</td>
