--- a/app/views/pages/pollapi.html.erb
+++ b/app/views/pages/pollapi.html.erb
@@ -189,6 +189,12 @@
             <td>None</td>
           </tr>
           <tr>
+            <td>403</td>
+            <td>Forbidden</td>
+            <td>GET, HEAD, OPTIONS</td>
+            <td>None</td>
+          </tr>
+          <tr>
             <td>404</td>
             <td>Not Found - if optional cap profile id not found.</td>
             <td>GET, HEAD, OPTIONS</td>
