--- a/app/views/pages/pubsapi.html.erb
+++ b/app/views/pages/pubsapi.html.erb
@@ -136,6 +136,12 @@
             <td>None</td>
           </tr>
           <tr>
+            <td>403</td>
+            <td>Forbidden</td>
+            <td>POST, OPTIONS</td>
+            <td>None</td>
+          </tr>
+          <tr>
             <td>405</td>
             <td>Method Not Allowed</td>
             <td>GET, HEAD, PUT, PATCH, DELETE</td>
