--- a/app/views/pages/queryapi.html.erb
+++ b/app/views/pages/queryapi.html.erb
@@ -163,6 +163,12 @@
             <td>None</td>
           </tr>
           <tr>
+            <td>403</td>
+            <td>Forbidden</td>
+            <td>GET, HEAD, OPTIONS</td>
+            <td>None</td>
+          </tr>
+          <tr>
             <td>405</td>
             <td>Method Not Allowed</td>
             <td>POST, PATCH, PUT, DELETE</td>
