--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to image_tag("sul-logo.png", alt: "SUL"), 'http://library.stanford.edu/' %>
+      <%= link_to image_tag("sul-logo.png", alt: "SUL"), 'https://library.stanford.edu/' %>
     </div>
       <!-- <%= link_to "SUL Publications Server", '#', id: "logo" %> -->
      <!-- <nav>
