Order of XML elements matters
This is bad practice, but once you commit to writing XSD for
everything (like SOAP/WSDL) and realize that is pretty painful, it turns
out you take shortcuts like semantic order of XML elements.

--- a/app/views/web_of_science/retrieve_by_id.xml.erb
+++ b/app/views/web_of_science/retrieve_by_id.xml.erb
@@ -1,15 +1,19 @@
 <woksearch:retrieveById>
   <databaseId>WOS</databaseId>
-  <queryLanguage>en</queryLanguage>
 <% @uids.each do |uid| %>
   <uid><%= uid %></uid>
 <% end %>
+  <queryLanguage>en</queryLanguage>
   <retrieveParameters>
     <firstRecord>1</firstRecord>
-    <count><%= @uids.count %></count>
+    <count>100</count>
     <option>
       <key>RecordIDs</key>
       <value>On</value>
+    </option>
+    <option>
+      <key>targetNamespace</key>
+      <value>http://scientific.thomsonreuters.com/schema/wok5.4/public/FullRecord</value>
     </option>
   </retrieveParameters>
 </woksearch:retrieveById>
