--- a/app/views/layouts/wos_soap.xml.erb
+++ b/app/views/layouts/wos_soap.xml.erb
@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/"
  xmlns:woksearch="http://woksearch.v3.wokmws.thomsonreuters.com">
  <soapenv:Header/>
