--- a/app/views/pages/pollapi.html.erb
+++ b/app/views/pages/pollapi.html.erb
@@ -1,12 +1,11 @@
 <div class="hero-unit">
   <h2>Resource Description</h2>
 
-
 <ul>
-  <li><b><%=Settings.SULPUB_ID.PUB_URI %>?changedSince={YYYY-MM-DDTHH:MM:SSZ}&page=1&per=1000&format=json</b></li>
-  <li><b><%=Settings.SULPUB_ID.PUB_URI %>?changedSince={YYYY-MM-DDTHH:MM:SSZ}&capActive=true&page=1&per=1000&format=json</b></li>
-  <li><b><%=Settings.SULPUB_ID.PUB_URI %>?capProfileId={id}&page=1&per=1000&format=json</b></li>
-  <li><b><%=Settings.SULPUB_ID.PUB_URI %>?capProfileId={id}&format=csv</b></li>
+  <li><b><%=Settings.SULPUB_ID.PUB_URI %>?changedSince={YYYY-MM-DD[THH:MM:SSZ]}&amp;page=1&amp;per=1000&amp;format=json</b></li>
+  <li><b><%=Settings.SULPUB_ID.PUB_URI %>?changedSince={YYYY-MM-DD[THH:MM:SSZ]}&amp;capActive=true&amp;page=1&amp;per=1000&amp;format=json</b></li>
+  <li><b><%=Settings.SULPUB_ID.PUB_URI %>?capProfileId={id}&amp;page=1&amp;per=1000&amp;format=json</b></li>
+  <li><b><%=Settings.SULPUB_ID.PUB_URI %>?capProfileId={id}&amp;format=csv</b></li>
 </ul>
 
 <hr style="color:#000;background-color:#000;border-color:#000"/>
@@ -25,13 +24,6 @@
           </tr>
         </thead>
           <tr>
-            <td>population</td>
-            <td>Predefined subset of authors from which to draw.</td>
-            <td>CAP</td>
-            <td>No</td>
-            <td>Not Implemented</td>
-          </tr>
-          <tr>
             <td>changedSince</td>
             <td>All pubs changed since.</td>
             <td>ISO 8601 Date</td>
@@ -40,9 +32,9 @@
           </tr>
           <tr>
             <td>capProfileId</td>
-            <td>Pubs for the given profile Id</td>
+            <td>Pubs for the given profile Id.</td>
             <td>Integer</td>
-            <td>No</td>
+            <td>Yes, if <code>format=csv</code>; otherwise no</td>
             <td>None</td>
           </tr>
           <tr>
@@ -54,7 +46,7 @@
           </tr>
           <tr>
             <td>per</td>
-            <td>Number of results per page</td>
+            <td>Number of results per page.</td>
             <td>Integer</td>
             <td>No</td>
             <td>1000</td>
@@ -149,7 +141,7 @@
         <tbody>
           <tr>
             <td>Content-Type</td>
-            <td>application/json</td>
+            <td>application/json, text/csv</td>
             <td>Content type of returned entity</td>
             <td>GET</td>
           </tr>
@@ -159,7 +151,6 @@
             <td>Lists allowed methods at URI</td>
             <td>OPTIONS</td>
           </tr>
-
         </tbody>
       </table>
 
